# quiet

./: .env.example  .gitignore  Cargo.toml  README.md  config.json
migrations/sqlite/2020-03-19-085931_create_posts/: up.sql
migrations/sqlite/2020-03-23-111506_create_posts/: up.sql
quiet_macros/: Cargo.toml
quiet_macros/src/: lib.rs  test.rs
src/: config.rs  error.rs  macros.rs  main.rs  routes.rs
src/database/: mod.rs  models.rs  mongo.rs  schema.rs  sqlite.rs  traits.rs
src/database/model/: post.rs
src/server/: mod.rs  routes.rs  template.rs
templates/: editor.html  index.html  post.html
tests/: bench.rs
