[package]
name = "quiet"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
dotenv = "0.15.0"
async-trait = "0.1.36"
once_cell = "1.4.0"
thiserror = "1.0.20"
byteorder = "1.3.4"
chrono = "0.4.15"
futures = "0.3.5"
askama = "0.10.3"

[dependencies.actix-web]
version = "3.0.0-beta.3"

[dependencies.quiet_macros]
version = "0.1"
path = "./quiet_macros"

[dependencies.serde]
version = "1.0.114"
features = ["derive"]

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["tokio-runtime"]

[dependencies.tokio]
version = "0.2.21"
default-features = false
features = ["full"]