[package]
name = "quiet_macros"
version = "0.1.0"
authors = ["soeur"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.36", features = ["full"] }
quote = "1.0.7"
#darling = "0.10.2"

[lib]
proc-macro = true